[vr] Load assets in OnResume

If going to DD home and back to Chrome we won't always recreate VrShell.
This could result in no assets being loaded. Load the assets in OnResume
instead. This will also apply assets that may have been updated during a
VR session.

Bug: 812411
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I2fc6cf2d38a71f7483f5f818e46e48e3cc9bdb0e
Reviewed-on: https://chromium-review.googlesource.com/1057870
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Tibor Goldschwendt <tiborg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558500}
Former-commit-id: f3cd1b091342b2e07fa9864f23e5b37f4fff25c0