chrome/browser/vr/test/mock_browser_ui_interface.h
@@ -39,6 +39,7 @@ class MockBrowserUiInterface : public BrowserUiInterface {
                       std::unique_ptr<Assets> assets,
                       const base::Version& component_version) override {}
   MOCK_METHOD0(OnAssetsUnavailable, void());
+  MOCK_METHOD0(WaitForAssets, void());
   MOCK_METHOD1(SetOverlayTextureEmpty, void(bool));
   MOCK_METHOD1(ShowSoftInput, void(bool));
   MOCK_METHOD4(UpdateWebInputIndices, void(int, int, int, int));
